complete change template admin.

--- a/angular-app/src/index.html
+++ b/angular-app/src/index.html
@@ -1,22 +1,28 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>Simple Blog Engine</title>
   <base href="/">
 
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
-  <link rel="stylesheet" href="http://www.telerik.com/kendo-angular-ui/npm/node_modules//@progress/kendo-theme-default/dist/all.css" />
-
-  <link rel="stylesheet"  href="https://cdn.datatables.net/1.10.16/css/jquery.dataTables.min.css" >
-
-  <link rel="stylesheet" href="assets/angular-datatables.css">
-
+  <link href="assets/plugins/bootstrap/bootstrap.css" rel="stylesheet" />
+  <link href="assets/font-awesome/css/font-awesome.css" rel="stylesheet" />
+  <link href="assets/plugins/pace/pace-theme-big-counter.css" rel="stylesheet" />
+  <link href="assets/css/style.css" rel="stylesheet" />
+  <link href="assets/css/main-style.css" rel="stylesheet" />
+  <link href="assets/plugins/dataTables/dataTables.bootstrap.css" rel="stylesheet" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body>
+
+<body class="body-Login-back">
   <app-root></app-root>
+  <script src="assets/plugins/jquery-1.10.2.js"></script>
+  <script src="assets/plugins/bootstrap/bootstrap.min.js"></script>
+  <script src="assets/plugins/pace/pace.js"></script>
+  <script src="assets/plugins/dataTables/jquery.dataTables.js"></script>
+  <script src="assets/plugins/dataTables/dataTables.bootstrap.js"></script>
 </body>
+
 </html>
